--- a/css/app.css
+++ b/css/app.css
@@ -13,7 +13,7 @@ div{
     display: block;
 }
 body{
-    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(back.jpg);
+    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(../back.jpg);
     background-size: cover;
     background-position: center;
     font-family: Lato;
@@ -191,6 +191,20 @@ i {
     }
 }
 
+button,
+textarea,
+input,
+select,
+a{
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+}
 
 @media only screen and (max-width: 900px) {
     body{
