--- a/css/app.css
+++ b/css/app.css
@@ -237,6 +237,45 @@ a{
 #full-body .content img {
     width: 128px;
 }
+.help{
+    width: 100%;
+    position: fixed;
+    height: 100%;
+    background: rgba(0,0,0,0.4);
+    top:0;
+    left: 0;
+    z-index: 1;
+}
+
+.help .content{
+    background: #fff;
+    width: 60%;
+    height: 60%;
+    background: #fff;
+    padding: 20px;
+    overflow: auto;
+    padding-top: 40px;
+    top:20%;
+    left: 20%;
+    position: absolute;
+}
+
+.help .content div{
+    padding: 10px 0;
+}
+
+.btn-cancel{
+    position: absolute;
+    left: 95%;
+    top: 20px;
+}
+
+button.btn-help {
+    position: absolute;
+    left: calc(100% - 20px);
+    top: 10px;
+    z-index: 1;
+}
 
 @media only screen and (max-width: 900px) {
     body{
@@ -263,6 +302,12 @@ a{
     }
     .btn-roll { top: 453px;}
     .btn-hold { top: 507px;}
+    .help .content{
+        width: 100%;
+        height: 100%;
+        top:0%;
+        left: 0%;
+    }
 }
 
 @media only screen and (max-width: 900px) and (orientation: landscape) {
